# taifex-query

./: .gitignore  .pre-commit-config.yaml  CLAUDE_CONFIG.md  CLAUDE_RESPONSE_GUIDE.md  Claude跨討論組_log.md  F1_check.py  README.md  README_back.md  TAIFEX 自動化查詢專案（進階版）.md  Taifex 專案開發討論記錄.md  Taifex.txt  calculate_5day_ma.py  check_url.py  config.py  conftest.py  debug_f01.py  debug_f1.py  debug_taifex.py  debug_taifex2.py  debug_taifex3.py  debug_taifex4.py  debug_taifex5.py  f01_fetcher.py  f01_fetcher_dev.py  f1.py  g_f01.py  get_tx_foreign_oi.py  get_tx_foreign_oi_api.py  ocr_min_test.py  ocr_parse_foreign_strong.py  pyproject.toml  requirements-dev.txt  requirements.txt  run - 複製 (2).py  run - 複製.py  run.py  run.py 開發規格書.MD  run1.py  run_2.py  run_Claude_vs code.py  (+16 more)
.claude/: settings.json  settings.local.json
Git Command/: README_PowerShell.txt
TEMP/: debug_f2.py  debug_output.txt  factors_taifex.py  ocr_parse_foreign.py  requirements.txt  run - 1.py  taifer_dom_foreign_simple.py  taifex_dom_foreign_simple.py  taifex_foreign_html.py  taifex_foreign_html_multi.py  taifex_save_csv_20251124.py
data/: 2025-11-27_f01.json  2025-11-28_f01.json  2025-11-28_f01_test.json  2025-12-01_f01_test.json  2025-12-02_f01.json  2025-12-02_f01_test.json  2025-12-03_f01.json  2025-12-03_f01_dev.json  2025-12-03_f01_fetcher.json  2025-12-04_f01_fetcher - 複製.json  2025-12-04_f01_fetcher.json  2025-12-04_f01_fetcher_selenium.json  2025-12-04_f14_fetcher_dev_dev.json  2025-12-05_f01_fetcher.txt  2025-12-06_f01_fetcher.txt  F1_foreign_oi.txt  F2_foreign_oi_delta.txt  factors_20251126.json  (+1 more)
(+95 files in other folders)
